fit width overflow for slide headings, and fixed dynamic placement

--- a/src/index.css
+++ b/src/index.css
@@ -59,23 +59,23 @@ textarea {
 }
 
 .title {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 60px;
+  /* font-family: Arial, Helvetica, sans-serif; */
+  font-size: 50px;
   font-weight: 600;
   color: light-dark(black, white);
   margin: 40px 40px 0px;
 }
 
 .subtitle {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 40px;
+  /* font-family: Arial, Helvetica, sans-serif; */
+  font-size: 30px;
   font-weight: 400;
   color: light-dark(black, white);
   margin: 20px 40px 20px;
 }
 
 .slide-title {
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
   font-size: 30px;
   font-weight: 600;
   color: light-dark(black, white);
